@@ -47,7 +47,7 @@ extern int    ebiosread(int dev, unsigned long long sec, int count);
 extern int    ebioswrite(int dev, long sec, int count);
 extern int    get_drive_info(int drive, struct driveInfo *dp);
 extern int    ebiosEjectMedia(int biosdev);
-extern void   putc(int ch);
+extern void bios_putchar(int ch);
 extern void   putca(int ch, int attr, int repeat);
 extern int    getc(void);
 extern void   pause();
@@ -91,7 +91,7 @@ extern bool   gVerboseMode;
 extern bool   gErrors;
 extern void   initBooterLog(void);
 extern void   setupBooterLog(void);
-extern void   putchar(int ch);
+extern int    putchar(int ch);
 extern int    getchar(void);
 extern void   msglog(const char * format, ...);
 extern int    printf(const char *format, ...);
