@@ -1,43 +1,12 @@
 MODULE_NAME = HelloWorld
 MODULE_VERSION = "1.0.0"
 MODULE_COMPAT_VERSION = "1.0.0"
-#MODULE_START = _$(MODULE_NAME)_start
+#MODULE_START = $(MODULE_NAME)_start
 MODULE_START = __Z16HelloWorld_startv
 MODULE_DEPENDENCIES = uClibc++
 
 DIR = HelloWorld
 
 MODULE_OBJS = HelloWorld.o
-
-OPTIM = -Os -Oz
-DEBUG = -DNOTHING
-#DEBUG = -DDEBUG_HELLO_WORLD=1
-CFLAGS	= $(RC_CFLAGS) $(OPTIM) $(MORECPP) -arch i386 -g -Wmost \
-    -D__ARCHITECTURE__=\"i386\" -DSAIO_INTERNAL_USER \
-    -DRCZ_COMPRESSED_FILE_SUPPORT $(DEBUG) \
-    -fno-builtin $(OMIT_FRAME_POINTER_CFLAG) \
-    -mpreferred-stack-boundary=2 -fno-align-functions -fno-stack-protector \
-    -march=pentium4 -msse2 -mfpmath=sse -msoft-float -fno-common
-
-DEFINES=
-CONFIG = hd
-INC = -I. -I.. -I$(SYMROOT) -I$(UTILDIR) -I$(LIBSADIR) -I$(LIBSAIODIR) -I$(BOOT2DIR)
-LIBS=
-
-VPATH = $(OBJROOT):$(SYMROOT)
-
-
-
-SFILES =
-CFILES = 
-HFILES = 
-EXPORTED_HFILES =
-INSTALLED_HFILES =
-OTHERFILES = Makefile
-ALLSRC =  $(SFILES) $(CFILES) \
-	$(HFILES) $(OTHERFILES)
-DIRS_NEEDED = $(OBJROOT) $(SYMROOT)
-
-all embedtheme optionrom: dylib
 
 include ../MakeInc.dir
